--- a/fav.html
+++ b/fav.html
@@ -18,7 +18,7 @@
   <button id="bookmarkBtn">加入收藏</button>
 
   <h2>已收藏页面 fav-list</h2>
-  <ul id="bookmarkBtnList"></ul>
+  <ul id="bookmarkList"></ul>
   <script type="module" src="/main.js"></script>
 
 </body>
