--- a/free/detail/sass.html
+++ b/free/detail/sass.html
@@ -162,7 +162,7 @@
                 <li aria-current="page" class="text-primary">Sass - CSS预处理器</li>
             </ol>
         </nav>
-        <button id="bookmarkBtn">加入收藏</button>  <ul id="bookmarkBtnList"></ul>
+          <ul id="bookmarkList"></ul>
     </div>
 
     <!-- 主要内容 -->
