--- a/free/detail/jest.html
+++ b/free/detail/jest.html
@@ -144,7 +144,7 @@
                     <li class="text-primary" aria-current="page">Jest - JavaScript测试框架</li>
                 </ol>
             </nav>
-            <ul id="bookmarkBtnList"></ul>
+            <ul id="bookmarkList"></ul>
         </div>
         
         <!-- 英雄区域 -->
