--- a/free/detail/prettier.html
+++ b/free/detail/prettier.html
@@ -20,6 +20,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.8/dist/chart.umd.min.js"></script>
+    <script src="/main.js"></script>
     
     <!-- Tailwind 配置 -->
     <script>
