--- a/fav.html
+++ b/fav.html
@@ -13,12 +13,20 @@
   </style>
 </head>
 <body>
+    <!-- 邮件订阅组件容器：ID需与main.js中传入的一致 -->
+  <div id="emailSubscriptionContainer"></div>
+
+  <!-- 引入FontAwesome（加载按钮旋转图标，可选） -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
+
+  <!-- 引入入口脚本（需加type="module"启用ES6模块） -->
+  <script type="module" src="./main.js"></script>
 
   <h1>当前页面 bookmarkBtn</h1>
   <button id="bookmarkBtn">加入收藏</button>
 
   <h2>已收藏页面 fav-list</h2>
-  <ul id="bookmarkList"></ul>
+  <div id="bookmarkList"></div>
   <script type="module" src="/main.js"></script>
 
 </body>
