--- a/fav.html
+++ b/fav.html
@@ -13,12 +13,33 @@
   </style>
 </head>
 <body>
-    <!-- 邮件订阅组件容器：ID需与main.js中传入的一致 -->
-  <div id="emailSubscriptionContainer"></div>
+     
 
-  <!-- 引入FontAwesome（加载按钮旋转图标，可选） -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
-
+  <!-- 用户页面的HTML -->
+<div class="my-custom-subscription">
+  <!-- 输入框：必须有id="emailInput" -->
+  <input 
+      type="email" 
+      id="emailInput" 
+      placeholder="请输入邮箱"
+      class="my-input-style"  
+  >
+  
+  <!-- 按钮：必须有id="subscribeBtn" -->
+  <button 
+      id="subscribeBtn"
+      class="my-button-style"  
+  >
+      立即订阅
+  </button>
+  
+  <!-- 提示区：必须有id="subscriptionMessage" -->
+  <div 
+      id="subscriptionMessage"
+      class="my-message-style"  
+  ></div>
+</div>
+ 
   <!-- 引入入口脚本（需加type="module"启用ES6模块） -->
   <script type="module" src="./main.js"></script>
 
