--- a/fav.html
+++ b/fav.html
@@ -15,12 +15,12 @@
 <body>
      
 
-  <!-- 用户页面的HTML -->
+  <!-- 用户页面的HTML WARP -->
 <div class="my-custom-subscription">
   <!-- 输入框：必须有id="emailInput" -->
   <input 
       type="email" 
-      id="emailInput" 
+      id="subscribeEmail" 
       placeholder="请输入邮箱"
       class="my-input-style"  
   >
