--- a/email.html
+++ b/email.html
@@ -151,7 +151,7 @@
         
         <div 
           id="subscriptionMessage"
-          class="my-message-style text-sm p-3 rounded-lg hidden"
+          class="my-message-style text-sm p-3 rounded-lg "
         ></div>
       </div>
       
