--- a/book.html
+++ b/book.html
@@ -47,7 +47,7 @@
   </footer>
 
   <!-- 引入功能 JS -->
-  <script src="/main.js"></script>
+  <script type="module" src="/main.js"></script>
 
 </body>
 </html>
