--- a/free/detail/bitbucket.html
+++ b/free/detail/bitbucket.html
@@ -191,6 +191,30 @@
                 </div>
             </div>
         </section>
+
+        <!-- 邮件订阅 -->
+        <section class="py-16 bg-darker">
+          <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="bg-gradient-to-r from-primary/20 to-secondary/20 rounded-xl p-8 border border-gray-800">
+              <h3 class="text-xl font-bold mb-4">订阅开发者工具更新</h3>
+              <p class="text-gray-300 mb-6">获取Bitbucket最新动态和代码管理技巧</p>
+              <div class="flex flex-col sm:flex-row gap-3 max-w-lg">
+                <input 
+                  type="email" 
+                  id="subscribeEmail"
+                  placeholder="输入您的邮箱地址"
+                  class="flex-1 bg-dark/70 border border-gray-700 rounded-lg px-4 py-3 focus:outline-none focus:border-accent transition-colors"
+                >
+                <button 
+                  id="subscribeBtn"
+                  class="bg-accent hover:bg-accent/90 text-white px-6 py-3 rounded-lg font-medium transition-all shadow-lg shadow-accent/20 hover:shadow-accent/30 whitespace-nowrap"
+                >
+                  立即订阅
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
         
         <!-- 关于 Bitbucket -->
         <section id="about" class="mb-20 fade-in">
