--- a/free/detail/notion.html
+++ b/free/detail/notion.html
@@ -150,6 +150,30 @@
             </div>
         </section>
 
+        <!-- 邮件订阅 -->
+        <section class="py-16 bg-notion-card">
+          <div class="container mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="bg-gradient-to-r from-notion-accent/20 to-purple-600/20 rounded-xl p-8 border border-notion-border">
+              <h3 class="text-xl font-bold mb-4">订阅生产力工具更新</h3>
+              <p class="text-notion-light mb-6">获取Notion最新动态和效率技巧</p>
+              <div class="flex flex-col sm:flex-row gap-3 max-w-lg">
+                <input 
+                  type="email" 
+                  id="subscribeEmail"
+                  placeholder="输入您的邮箱地址"
+                  class="flex-1 bg-notion-card/70 border border-notion-border rounded-lg px-4 py-3 focus:outline-none focus:border-notion-accent transition-colors"
+                >
+                <button 
+                  id="subscribeBtn"
+                  class="bg-notion-accent hover:bg-opacity-90 text-white px-6 py-3 rounded-lg font-medium transition-all shadow-lg shadow-notion-accent/20 hover:shadow-notion-accent/30 whitespace-nowrap"
+                >
+                  立即订阅
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <!-- 简介部分 -->
         <section id="introduction" class="mb-20 scroll-mt-20">
             <div class="max-w-4xl mx-auto">
