--- a/free/detail/react.html
+++ b/free/detail/react.html
@@ -267,7 +267,7 @@
         <!-- 优点部分 -->
         <div class="bg-dark rounded-2xl p-8 border border-light/10">
           <div class="flex items-center mb-8">
-            <div class="w-12 h-12 bg-accent/20 rounded-full flex items-center justify-center mr-4">
+            <div class="w-12 h-12 bg-accent/20 rounded-full flex items-center justify-center mr-4"></div>
               <i class="fa fa-thumbs-up text-accent text-xl"></i>
             </div>
             <h3 class="text-2xl font-bold">主要优点</h3>
@@ -715,6 +715,30 @@
     </div>
   </section>
 
+  <!-- 邮件订阅 -->
+  <section class="py-16 bg-dark">
+    <div class="container mx-auto px-4">
+      <div class="bg-gradient-to-r from-primary/20 to-secondary/20 rounded-xl p-8 border border-light/10">
+        <h3 class="text-xl font-bold mb-4">订阅前端技术更新</h3>
+        <p class="text-light/70 mb-6">获取React最新动态和技术资源</p>
+        <div class="flex flex-col sm:flex-row gap-3 max-w-lg">
+          <input 
+            type="email" 
+            id="subscribeEmail"
+            placeholder="输入您的邮箱地址"
+            class="flex-1 bg-darker/70 border border-light/20 rounded-lg px-4 py-3 focus:outline-none focus:border-primary transition-colors"
+          >
+          <button 
+            id="subscribeBtn"
+            class="bg-primary hover:bg-primary/90 text-white px-6 py-3 rounded-lg font-medium transition-all shadow-lg shadow-primary/20 hover:shadow-primary/30 whitespace-nowrap"
+          >
+            立即订阅
+          </button>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- 页脚 -->
   <footer class="bg-dark border-t border-light/10 py-12">
     <div class="container mx-auto px-4">
@@ -798,6 +822,9 @@
     <i class="fa fa-arrow-up"></i>
   </button>
 
+  <!-- 邮件订阅功能 -->
+  <script src="/assets/js/email-subscription.js"></script>
+  
   <!-- JavaScript -->
   <script>
     // 导航栏滚动效果
