--- a/free/index.html
+++ b/free/index.html
@@ -154,6 +154,28 @@
         </section>
     </main>
 
+    <!-- 邮件订阅 -->
+    <section class="mb-16">
+      <div class="bg-gradient-to-r from-primary/20 to-secondary/20 rounded-xl p-8 border border-gray-800">
+        <h3 class="text-xl font-bold mb-4">订阅技术资源更新</h3>
+        <p class="text-gray-300 mb-6">获取最新免费资源和技术动态</p>
+        <div class="flex flex-col sm:flex-row gap-3 max-w-lg">
+          <input 
+            type="email" 
+            id="subscribeEmail"
+            placeholder="输入您的邮箱地址"
+            class="flex-1 bg-darker/70 border border-gray-700 rounded-lg px-4 py-3 focus:outline-none focus:border-primary transition-colors"
+          >
+          <button 
+            id="subscribeBtn"
+            class="bg-primary hover:bg-primary/90 text-white px-6 py-3 rounded-lg font-medium transition-all shadow-lg shadow-primary/20 hover:shadow-primary/30 whitespace-nowrap"
+          >
+            立即订阅
+          </button>
+        </div>
+      </div>
+    </section>
+
     <!-- 页脚 -->
     <footer class="bg-darker border-t border-gray-800 py-8 mt-16">
         <div class="container mx-auto px-4">
@@ -190,6 +212,9 @@
         <i class="fa fa-arrow-up"></i>
     </button>
 
+    <!-- 邮件订阅功能 -->
+    <script src="/assets/js/email-subscription.js"></script>
+    
     <script>
         // 资源分类数据 - 来自 free/ 目录
         const categories = [
