--- a/free/detail/asana.html
+++ b/free/detail/asana.html
@@ -188,6 +188,30 @@
             <div class="absolute bottom-0 left-0 w-full h-16 bg-gradient-to-t from-dark to-transparent"></div>
         </section>
 
+        <!-- 邮件订阅 -->
+        <section class="py-16 bg-dark-light">
+          <div class="container mx-auto px-4">
+            <div class="bg-gradient-to-r from-primary/20 to-secondary/20 rounded-xl p-8 border border-gray-800">
+              <h3 class="text-xl font-bold mb-4">订阅项目管理工具更新</h3>
+              <p class="text-gray-300 mb-6">获取Asana最新动态和团队协作技巧</p>
+              <div class="flex flex-col sm:flex-row gap-3 max-w-lg">
+                <input 
+                  type="email" 
+                  id="subscribeEmail"
+                  placeholder="输入您的邮箱地址"
+                  class="flex-1 bg-dark-lighter/70 border border-gray-700 rounded-lg px-4 py-3 focus:outline-none focus:border-primary transition-colors"
+                >
+                <button 
+                  id="subscribeBtn"
+                  class="bg-primary hover:bg-primary/90 text-white px-6 py-3 rounded-lg font-medium transition-all shadow-lg shadow-primary/20 hover:shadow-primary/30 whitespace-nowrap"
+                >
+                  立即订阅
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <!-- Asana 概览 -->
         <section class="py-16 bg-dark">
             <div class="container mx-auto px-4">
