--- a/free/detail/fastapi.html
+++ b/free/detail/fastapi.html
@@ -141,6 +141,30 @@
             <div class="hidden lg:block absolute -bottom-40 -left-20 w-96 h-96 bg-secondary/10 rounded-full blur-3xl"></div>
         </section>
 
+        <!-- 邮件订阅 -->
+        <section class="py-16 bg-dark-light">
+          <div class="container mx-auto px-4">
+            <div class="bg-gradient-to-r from-primary/20 to-secondary/20 rounded-xl p-8 border border-gray-800">
+              <h3 class="text-xl font-bold mb-4">订阅后端技术更新</h3>
+              <p class="text-gray-300 mb-6">获取FastAPI最新动态和Python技巧</p>
+              <div class="flex flex-col sm:flex-row gap-3 max-w-lg">
+                <input 
+                  type="email" 
+                  id="subscribeEmail"
+                  placeholder="输入您的邮箱地址"
+                  class="flex-1 bg-dark/70 border border-gray-700 rounded-lg px-4 py-3 focus:outline-none focus:border-primary transition-colors"
+                >
+                <button 
+                  id="subscribeBtn"
+                  class="bg-primary hover:bg-primary/90 text-white px-6 py-3 rounded-lg font-medium transition-all shadow-lg shadow-primary/20 hover:shadow-primary/30 whitespace-nowrap"
+                >
+                  立即订阅
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <!-- 关于部分 -->
         <section id="about" class="py-20 bg-dark-light">
             <div class="container mx-auto px-4">
