--- a/free/detail/less.html
+++ b/free/detail/less.html
@@ -198,7 +198,7 @@
                 </div>
             </div>
         </section>
-        
+
         <!-- 关于Less -->
         <section class="py-20 bg-dark">
             <div class="container mx-auto px-4">
@@ -718,9 +718,18 @@ module.exports = {
                     <p class="text-gray-400 mb-4">获取Less的最新资讯和教程</p>
                     <form class="space-y-3">
                         <div>
-                            <input type="email" placeholder="你的邮箱地址" class="w-full px-4 py-2 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary/50 text-white">
+                            <input 
+                                type="email" 
+                                id="subscribeEmail"
+                                placeholder="你的邮箱地址" 
+                                class="w-full px-4 py-2 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-primary/50 text-white"
+                            >
                         </div>
-                        <button type="submit" class="w-full px-4 py-2 bg-primary text-darker font-medium rounded-lg hover:bg-primary/90 transition-colors">
+                        <button 
+                            type="submit" 
+                            id="subscribeBtn"
+                            class="w-full px-4 py-2 bg-primary text-darker font-medium rounded-lg hover:bg-primary/90 transition-colors"
+                        >
                             订阅
                         </button>
                     </form>
