--- a/free/detail/sass.html
+++ b/free/detail/sass.html
@@ -222,6 +222,30 @@
             </div>
         </section>
 
+        <!-- 邮件订阅 -->
+        <section class="py-16 bg-dark-gray">
+          <div class="container mx-auto px-4">
+            <div class="bg-gradient-to-r from-primary/20 to-secondary/20 rounded-xl p-8 border border-light-gray/10">
+              <h3 class="text-xl font-bold mb-4">订阅前端技术更新</h3>
+              <p class="text-light/70 mb-6">获取Sass最新动态和CSS技巧</p>
+              <div class="flex flex-col sm:flex-row gap-3 max-w-lg">
+                <input 
+                  type="email" 
+                  id="subscribeEmail"
+                  placeholder="输入您的邮箱地址"
+                  class="flex-1 bg-dark/70 border border-light-gray/20 rounded-lg px-4 py-3 focus:outline-none focus:border-primary transition-colors"
+                >
+                <button 
+                  id="subscribeBtn"
+                  class="bg-primary hover:bg-primary/90 text-white px-6 py-3 rounded-lg font-medium transition-all shadow-lg shadow-primary/20 hover:shadow-primary/30 whitespace-nowrap"
+                >
+                  立即订阅
+                </button>
+              </div>
+            </div>
+          </div>
+        </section>
+
         <!-- 名字含义和起源 -->
         <section id="introduction" class="py-16 scroll-mt-24">
             <div class="flex flex-col md:flex-row gap-12 items-center">
