--- a/free/detail/less.html
+++ b/free/detail/less.html
@@ -1164,5 +1164,8 @@ module.exports = {
             }
         });
     </script>
+    
+    <!-- 引入主JavaScript模块 -->
+    <script src="/main.js" type="module"></script>
 </body>
 </html>
