统一隐私政策链接为/about.html#privacy

--- a/free/detail/canva.html
+++ b/free/detail/canva.html
@@ -890,7 +890,7 @@
                     <h4 class="text-lg font-semibold mb-4">法律</h4>
                     <ul class="space-y-2">
                         <li><a href="https://www.canva.com/terms-of-service/" target="_blank" class="text-gray-400 hover:text-primary transition-colors">服务条款</a></li>
-                        <li><a href="https://www.canva.com/privacy-policy/" target="_blank" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" target="_blank" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="https://www.canva.com/copyright/" target="_blank" class="text-gray-400 hover:text-primary transition-colors">版权信息</a></li>
                         <li><a href="https://www.canva.com/cookies/" target="_blank" class="text-gray-400 hover:text-primary transition-colors">Cookie政策</a></li>
                     </ul>
