--- a/free/detail/github.html
+++ b/free/detail/github.html
@@ -1185,7 +1185,7 @@
                     <p class="text-sm mb-4 md:mb-0">© 2023 GitHub, Inc. 保留所有权利。</p>
                     <div class="flex flex-wrap justify-center gap-6">
                         <a href="https://github.com/site/terms" target="_blank" class="text-sm hover:text-white transition-colors">服务条款</a>
-                        <a href="https://github.com/site/privacy" target="_blank" class="text-sm hover:text-white transition-colors">隐私政策</a>
+                        <a href="/about.html#privacy" target="_blank" class="text-sm hover:text-white transition-colors">隐私政策</a>
                         <a href="https://github.com/site/cookies" target="_blank" class="text-sm hover:text-white transition-colors">Cookie 政策</a>
                         <a href="https://github.com/security" target="_blank" class="text-sm hover:text-white transition-colors">安全</a>
                         <a href="https://github.com/help" target="_blank" class="text-sm hover:text-white transition-colors">帮助</a>
