--- a/free/detail/gmail.html
+++ b/free/detail/gmail.html
@@ -862,7 +862,7 @@
                         <li><a href="https://support.google.com/mail" target="_blank" class="text-dark-400 hover:text-gmail-blue transition-colors">帮助中心</a></li>
                         <li><a href="https://support.google.com/mail/community" target="_blank" class="text-dark-400 hover:text-gmail-blue transition-colors">用户社区</a></li>
                         <li><a href="https://safety.google" target="_blank" class="text-dark-400 hover:text-gmail-blue transition-colors">安全中心</a></li>
-                        <li><a href="https://policies.google.com/privacy" target="_blank" class="text-dark-400 hover:text-gmail-blue transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" target="_blank" class="text-dark-400 hover:text-gmail-blue transition-colors">隐私政策</a></li>
                         <li><a href="https://policies.google.com/terms" target="_blank" class="text-dark-400 hover:text-gmail-blue transition-colors">服务条款</a></li>
                     </ul>
                 </div>
