--- a/free/detail/prometheus.html
+++ b/free/detail/prometheus.html
@@ -891,7 +891,7 @@
                 <div>
                     <h3 class="font-semibold mb-4">法律信息</h3>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="/privacy" class="hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="/terms" class="hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="/disclaimer" class="hover:text-primary transition-colors">免责声明</a></li>
                         <li><a href="/sitemap.html" class="hover:text-primary transition-colors">网站地图</a></li>
