--- a/free/detail/render.html
+++ b/free/detail/render.html
@@ -863,7 +863,7 @@
                         <li><a href="https://render.com/blog" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition-colors">博客</a></li>
                         <li><a href="https://render.com/pricing" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition-colors">定价</a></li>
                         <li><a href="https://render.com/legal/terms-of-service" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition-colors">服务条款</a></li>
-                        <li><a href="https://render.com/legal/privacy-policy" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                     </ul>
                 </div>
                 
