--- a/free/detail/replit.html
+++ b/free/detail/replit.html
@@ -630,7 +630,7 @@
                             <li><a href="https://replit.com/site/blog" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition-colors">博客</a></li>
                             <li><a href="https://replit.com/pricing" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition-colors">定价方案</a></li>
                             <li><a href="https://replit.com/site/terms" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition-colors">服务条款</a></li>
-                            <li><a href="https://replit.com/site/privacy" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+                            <li><a href="/about.html#privacy" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         </ul>
                     </div>
                     
