--- a/free/domain.html
+++ b/free/domain.html
@@ -778,7 +778,7 @@
             <li><a href="categories.html" class="text-gray-400 hover:text-white transition-colors">资源分类</a></li>
             <li><a href="submit.html" class="text-gray-400 hover:text-white transition-colors">资源提交</a></li>
             <li><a href="terms.html" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
-            <li><a href="privacy.html" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
+            <li><a href="/about.html#privacy" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
           </ul>
         </div>
         
