--- a/developer/jakewharton.html
+++ b/developer/jakewharton.html
@@ -820,7 +820,7 @@
           <ul class="space-y-2">
             <li><a href="/about" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
             <li><a href="/contact" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
-            <li><a href="/privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+            <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
             <li><a href="/terms" class="text-gray-400 hover:text-primary transition-colors">服务条款</a></li>
             <li><a href="/contribute" class="text-gray-400 hover:text-primary transition-colors">贡献内容</a></li>
           </ul>
@@ -832,7 +832,7 @@
           &copy; 2023 DevProfiles. 保留所有权利。
         </p>
         <div class="flex gap-6">
-          <a href="/privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
+          <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
           <a href="/terms" class="text-gray-500 hover:text-primary text-sm transition-colors">服务条款</a>
           <a href="/sitemap.html" class="text-gray-500 hover:text-primary text-sm transition-colors">网站地图</a>
         </div>
