--- a/free/detail/excalidraw.html
+++ b/free/detail/excalidraw.html
@@ -654,7 +654,7 @@
                         <li><a href="/" class="text-light-300 hover:text-secondary transition-colors">首页</a></li>
                         <li><a href="/about" class="text-light-300 hover:text-secondary transition-colors">关于我们</a></li>
                         <li><a href="/contact" class="text-light-300 hover:text-secondary transition-colors">联系我们</a></li>
-                        <li><a href="/privacy" class="text-light-300 hover:text-secondary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-light-300 hover:text-secondary transition-colors">隐私政策</a></li>
                         <li><a href="/terms" class="text-light-300 hover:text-secondary transition-colors">使用条款</a></li>
                     </ul>
                 </div>
