--- a/free/detail/express.html
+++ b/free/detail/express.html
@@ -766,7 +766,7 @@ app.listen(port, () => {
                 <div>
                     <h4 class="font-semibold text-white mb-4">法律信息</h4>
                     <ul class="space-y-2 text-sm">
-                        <li><a href="/privacy" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
                         <li><a href="/terms" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-white transition-colors">网站地图</a></li>
                         <li><a href="/contact" class="text-gray-400 hover:text-white transition-colors">联系我们</a></li>
@@ -781,7 +781,7 @@ app.listen(port, () => {
                     </p>
                     <div class="flex gap-6">
                         <a href="/sitemap.html" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">网站地图</a>
-                        <a href="/privacy" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">隐私政策</a>
+                        <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">隐私政策</a>
                         <a href="/terms" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">使用条款</a>
                     </div>
                 </div>
