--- a/free/detail/grafana.html
+++ b/free/detail/grafana.html
@@ -1242,7 +1242,7 @@
                     &copy; 2023 开源资源网. 保留所有权利.
                 </p>
                 <div class="flex space-x-6">
-                    <a href="/privacy.html" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
                     <a href="/terms.html" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
                     <a href="/sitemap.html" class="text-gray-500 hover:text-primary text-sm transition-colors">网站地图</a>
                 </div>
