--- a/free/detail/layui.html
+++ b/free/detail/layui.html
@@ -894,7 +894,7 @@ layui.use(['element', 'layer'], function(){
                 <div>
                     <h4 class="font-semibold text-lg mb-6">法律信息</h4>
                     <ul class="space-y-3">
-                        <li><a href="/privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="/terms" class="text-gray-400 hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="/copyright" class="text-gray-400 hover:text-primary transition-colors">版权信息</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
