--- a/free/detail/mock-api.html
+++ b/free/detail/mock-api.html
@@ -866,7 +866,7 @@ print(response.json())</code></pre>
                 <div>
                     <h4 class="text-lg font-semibold mb-6">法律信息</h4>
                     <ul class="space-y-3">
-                        <li><a href="/privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="/terms" class="text-gray-400 hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
                         <li><a href="/disclaimer" class="text-gray-400 hover:text-primary transition-colors">免责声明</a></li>
@@ -878,7 +878,7 @@ print(response.json())</code></pre>
                 <p class="text-gray-500 text-sm mb-4 md:mb-0">© 2023 API资源站. 保留所有权利.</p>
                 <div class="flex space-x-6">
                     <a href="/sitemap.html" class="text-gray-500 hover:text-primary text-sm transition-colors">网站地图</a>
-                    <a href="/privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
                     <a href="/terms" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
                 </div>
             </div>
