--- a/free/detail/npm.html
+++ b/free/detail/npm.html
@@ -782,7 +782,7 @@
                 <div>
                     <h4 class="text-lg font-bold mb-6">法律信息</h4>
                     <ul class="space-y-3">
-                        <li><a href="/privacy" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
                         <li><a href="/terms" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-white transition-colors">网站地图</a></li>
                         <li><a href="/contact" class="text-gray-400 hover:text-white transition-colors">联系我们</a></li>
@@ -796,7 +796,7 @@
                 </p>
                 <div class="flex space-x-6">
                     <a href="/sitemap.html" class="text-gray-500 hover:text-gray-300 text-sm">网站地图</a>
-                    <a href="/privacy" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
                     <a href="/terms" class="text-gray-500 hover:text-gray-300 text-sm">使用条款</a>
                 </div>
             </div>
