--- a/free/detail/postcss.html
+++ b/free/detail/postcss.html
@@ -879,7 +879,7 @@ module.exports = {
         <div>
           <h4 class="text-white font-semibold mb-4">法律信息</h4>
           <ul class="space-y-2 text-sm">
-            <li><a href="/privacy" class="text-light-300 hover:text-primary transition-colors">隐私政策</a></li>
+            <li><a href="/about.html#privacy" class="text-light-300 hover:text-primary transition-colors">隐私政策</a></li>
             <li><a href="/terms" class="text-light-300 hover:text-primary transition-colors">使用条款</a></li>
             <li><a href="/disclaimer" class="text-light-300 hover:text-primary transition-colors">免责声明</a></li>
             <li><a href="/sitemap.html" class="text-light-300 hover:text-primary transition-colors">网站地图</a></li>
@@ -893,7 +893,7 @@ module.exports = {
         </p>
         <div class="text-sm text-light-300">
           <a href="/sitemap.html" class="hover:text-primary transition-colors">网站地图</a> | 
-          <a href="/privacy" class="hover:text-primary transition-colors">隐私政策</a>
+          <a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a>
         </div>
       </div>
     </div>
