--- a/free/detail/postman.html
+++ b/free/detail/postman.html
@@ -695,7 +695,7 @@
             <div class="border-t border-dark-100/20 mt-12 pt-8 flex flex-col md:flex-row justify-between items-center fade-in-element">
                 <p class="text-light-300 text-sm mb-4 md:mb-0">© 2023 Postman, Inc. 保留所有权利.</p>
                 <div class="flex space-x-6">
-                    <a href="https://www.postman.com/legal/privacy-policy/" target="_blank" rel="noopener noreferrer" class="text-light-300 hover:text-primary text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" target="_blank" rel="noopener noreferrer" class="text-light-300 hover:text-primary text-sm transition-colors">隐私政策</a>
                     <a href="https://www.postman.com/legal/terms-of-service/" target="_blank" rel="noopener noreferrer" class="text-light-300 hover:text-primary text-sm transition-colors">服务条款</a>
                     <a href="https://www.postman.com/legal/cookie-policy/" target="_blank" rel="noopener noreferrer" class="text-light-300 hover:text-primary text-sm transition-colors">Cookie政策</a>
                 </div>
