--- a/free/detail/pytorch.html
+++ b/free/detail/pytorch.html
@@ -827,7 +827,7 @@
                     <ul class="space-y-3">
                         <li><a href="/about.html" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="/contact.html" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
-                        <li><a href="/privacy.html" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="/terms.html" class="text-gray-400 hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
                     </ul>
@@ -838,7 +838,7 @@
                 <p class="text-gray-500 text-sm mb-4 md:mb-0">© 2023 PyTorch资源站. 保留所有权利.</p>
                 <div class="flex space-x-6">
                     <a href="/sitemap.html" class="text-gray-500 hover:text-primary text-sm transition-colors">网站地图</a>
-                    <a href="/privacy.html" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
                     <a href="/terms.html" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
                 </div>
             </div>
