--- a/free/detail/ubuntu.html
+++ b/free/detail/ubuntu.html
@@ -991,7 +991,7 @@
                     <ul class="space-y-3">
                         <li><a href="/about" class="text-gray-400 hover:text-ubuntu-orange transition-colors">关于我们</a></li>
                         <li><a href="/contact" class="text-gray-400 hover:text-ubuntu-orange transition-colors">联系我们</a></li>
-                        <li><a href="/privacy" class="text-gray-400 hover:text-ubuntu-orange transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-ubuntu-orange transition-colors">隐私政策</a></li>
                         <li><a href="/terms" class="text-gray-400 hover:text-ubuntu-orange transition-colors">使用条款</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-ubuntu-orange transition-colors">网站地图</a></li>
                     </ul>
@@ -1005,7 +1005,7 @@
                     </p>
                     <div class="flex space-x-6">
                         <a href="/sitemap.html" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">网站地图</a>
-                        <a href="/privacy" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">隐私政策</a>
+                        <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">隐私政策</a>
                         <a href="/terms" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">使用条款</a>
                     </div>
                 </div>
