--- a/free/detail/yarn.html
+++ b/free/detail/yarn.html
@@ -718,7 +718,7 @@
                     <ul class="space-y-3">
                         <li><a href="/about" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="/contact" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
-                        <li><a href="/privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="/terms" class="text-gray-400 hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
                     </ul>
@@ -743,7 +743,7 @@
                     &copy; 2023 DevResources. 保留所有权利。
                 </p>
                 <div class="flex gap-6">
-                    <a href="/privacy" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">隐私政策</a>
                     <a href="/terms" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">使用条款</a>
                     <a href="/sitemap.html" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">网站地图</a>
                 </div>
