恢复about.html到上一次提交的状态

--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/about.html#privacy" class="menu-item flex items-center gap-3 px-4 py-3 rounded-lg border-l-4 border-transparent hover:bg-dark-lighter/50 transition-custom text-gray-300">
+                    <a href="#privacy" class="menu-item flex items-center gap-3 px-4 py-3 rounded-lg border-l-4 border-transparent hover:bg-dark-lighter/50 transition-custom text-gray-300">
                         <i class="fa fa-lock w-5 text-primary"></i>
                         <span>隐私政策</span>
                     </a>
@@ -506,7 +506,7 @@
                     <ul class="space-y-2">
                         <li><a href="#about" class="text-gray-400 hover:text-primary transition-custom">关于我们</a></li>
                         <li><a href="#contact" class="text-gray-400 hover:text-primary transition-custom">联系我们</a></li>
-                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-custom">隐私政策</a></li>
+                        <li><a href="#privacy" class="text-gray-400 hover:text-primary transition-custom">隐私政策</a></li>
                         <li><a href="#terms" class="text-gray-400 hover:text-primary transition-custom">使用条款</a></li>
                         <li><a href="#cookies" class="text-gray-400 hover:text-primary transition-custom">Cookie政策</a></li>
                     </ul>
