精确替换121个隐私政策链接从#到/about.html#privacy

--- a/developer/linustorvalds.html
+++ b/developer/linustorvalds.html
@@ -829,7 +829,7 @@
                     <ul class="space-y-2">
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">服务条款</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
                     </ul>
