--- a/free/cicd.html
+++ b/free/cicd.html
@@ -708,7 +708,7 @@
               </a>
             </li>
             <li><a href="#" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
-            <li><a href="#" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
+            <li><a href="/about.html#privacy" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
           </ul>
         </div>
         
