--- a/free/detail/notion.html
+++ b/free/detail/notion.html
@@ -576,7 +576,7 @@
                 <p class="text-notion-light text-sm mb-4 md:mb-0">© 2023 Notion 指南. 保留所有权利.</p>
                 <div class="flex space-x-6">
                     <a href="/sitemap.html" class="text-notion-light hover:text-notion-text text-sm transition-colors">网站地图</a>
-                    <a href="#" class="text-notion-light hover:text-notion-text text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-notion-light hover:text-notion-text text-sm transition-colors">隐私政策</a>
                     <a href="#" class="text-notion-light hover:text-notion-text text-sm transition-colors">使用条款</a>
                     <a href="#" class="text-notion-light hover:text-notion-text text-sm transition-colors">联系我们</a>
                 </div>
