--- a/free/detail/openai.html
+++ b/free/detail/openai.html
@@ -1033,7 +1033,7 @@
                         <li><a href="#" class="text-dark-400 hover:text-openai-primary transition-colors">博客</a></li>
                         <li><a href="#" class="text-dark-400 hover:text-openai-primary transition-colors">招贤纳士</a></li>
                         <li><a href="#" class="text-dark-400 hover:text-openai-primary transition-colors">联系我们</a></li>
-                        <li><a href="#" class="text-dark-400 hover:text-openai-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-dark-400 hover:text-openai-primary transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-dark-400 hover:text-openai-primary transition-colors">服务条款</a></li>
                     </ul>
                 </div>
