--- a/free/detail/pnpm.html
+++ b/free/detail/pnpm.html
@@ -874,7 +874,7 @@ pnpm install
                     <p>&copy; 2023 pnpm 介绍页面. 本网站仅作介绍用途，pnpm 是其 respective owners 的商标.</p>
                     <p class="mt-2">
                         <a href="/sitemap.html" class="hover:text-primary transition-colors">网站地图</a> | 
-                        <a href="#" class="hover:text-primary transition-colors">隐私政策</a> | 
+                        <a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a> | 
                         <a href="#" class="hover:text-primary transition-colors">使用条款</a>
                     </p>
                 </div>
