--- a/free/detail/spring-boot.html
+++ b/free/detail/spring-boot.html
@@ -606,7 +606,7 @@ java -jar target/myproject-0.0.1-SNAPSHOT.jar</code></pre>
             <div class="border-t border-gray-800 pt-8 flex flex-col md:flex-row justify-between items-center">
                 <p>&copy; 2023 Spring Hub. 保留所有权利。</p>
                 <div class="flex space-x-6 mt-4 md:mt-0">
-                    <a href="#" class="hover:text-primary transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a>
                     <a href="#" class="hover:text-primary transition-colors">使用条款</a>
                     <a href="#" class="hover:text-primary transition-colors">Cookie政策</a>
                     <a href="/sitemap.html" class="hover:text-primary transition-colors">网站地图</a>
