--- a/free/education.html
+++ b/free/education.html
@@ -573,7 +573,7 @@
             <li><a href="https://github.com/guomengtao/rinuo.com" target="_blank" rel="noopener" class="hover:text-primary">GitHub 仓库</a></li>
             <li><a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" rel="noopener" class="hover:text-primary">提交资源</a></li>
             <li><a href="#" class="hover:text-primary">使用条款</a></li>
-            <li><a href="#" class="hover:text-primary">隐私政策</a></li>
+            <li><a href="/about.html#privacy" class="hover:text-primary">隐私政策</a></li>
           </ul>
         </section>
         <section>
