--- a/free/stock.html
+++ b/free/stock.html
@@ -604,7 +604,7 @@
                         <li><a href="index.html" class="hover:text-primary transition-colors">首页</a></li>
                         <li><a href="ai.html" class="hover:text-primary transition-colors">AI接口资源</a></li>
                         <li><a href="#" class="hover:text-primary transition-colors">使用条款</a></li>
-                        <li><a href="#" class="hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="https://github.com" target="_blank" class="hover:text-primary transition-colors">提交资源</a></li>
                     </ul>
                 </div>
