--- a/hello/detail/invent.html
+++ b/hello/detail/invent.html
@@ -979,7 +979,7 @@
             <li><a href="#" class="text-neutral-600 hover:text-primary dark:text-neutral-400 dark:hover:text-primary transition-colors">团队成员</a></li>
             <li><a href="#" class="text-neutral-600 hover:text-primary dark:text-neutral-400 dark:hover:text-primary transition-colors">联系方式</a></li>
             <li><a href="#" class="text-neutral-600 hover:text-primary dark:text-neutral-400 dark:hover:text-primary transition-colors">反馈建议</a></li>
-            <li><a href="#" class="text-neutral-600 hover:text-primary dark:text-neutral-400 dark:hover:text-primary transition-colors">隐私政策</a></li>
+            <li><a href="/about.html#privacy" class="text-neutral-600 hover:text-primary dark:text-neutral-400 dark:hover:text-primary transition-colors">隐私政策</a></li>
           </ul>
         </div>
       </div>
