--- a/hello/detail/reward.html
+++ b/hello/detail/reward.html
@@ -910,7 +910,7 @@
             <li><a href="#" class="text-gray-400 hover:text-english-primary transition-colors">团队成员</a></li>
             <li><a href="#" class="text-gray-400 hover:text-english-primary transition-colors">联系方式</a></li>
             <li><a href="#" class="text-gray-400 hover:text-english-primary transition-colors">反馈建议</a></li>
-            <li><a href="#" class="text-gray-400 hover:text-english-primary transition-colors">隐私政策</a></li>
+            <li><a href="/about.html#privacy" class="text-gray-400 hover:text-english-primary transition-colors">隐私政策</a></li>
           </ul>
         </div>
       </div>
