--- a/book-7.html
+++ b/book-7.html
@@ -812,7 +812,7 @@
                     <ul class="space-y-2">
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系方式</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">使用条款</a></li>
                     </ul>
                 </div>
