--- a/dark.html
+++ b/dark.html
@@ -640,7 +640,7 @@
         <div class="flex flex-col md:flex-row justify-between items-center">
           <p class="text-gray-500 text-sm mb-4 md:mb-0">© 2023 ModeSwitch 设计展示. 保留所有权利.</p>
           <div class="flex space-x-6">
-            <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
+            <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
             <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">使用条款</a>
             <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">Cookie 政策</a>
           </div>
