--- a/developer/brendaneich.html
+++ b/developer/brendaneich.html
@@ -943,7 +943,7 @@
                     &copy; 2023 TechPioneers. 保留所有权利。
                 </div>
                 <div class="flex gap-6">
-                    <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
                     <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
                     <a href="/sitemap.html" class="text-gray-500 hover:text-primary text-sm transition-colors">网站地图</a>
                 </div>
