--- a/developer/danabramov.html
+++ b/developer/danabramov.html
@@ -1070,7 +1070,7 @@
                     &copy; 2023 TechProfiles. 保留所有权利。
                 </p>
                 <div class="flex space-x-6">
-                    <a href="#" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">隐私政策</a>
                     <a href="#" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">使用条款</a>
                     <a href="/sitemap.html" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">网站地图</a>
                 </div>
