--- a/developer/evanyou.html
+++ b/developer/evanyou.html
@@ -784,7 +784,7 @@
                     &copy; 2025 技术资源网. 保留所有权利.
                 </p>
                 <div class="flex gap-6">
-                    <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
                     <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
                     <a href="/sitemap.html" class="text-gray-500 hover:text-primary text-sm transition-colors">网站地图</a>
                 </div>
