--- a/developer/kentcdodds.html
+++ b/developer/kentcdodds.html
@@ -981,7 +981,7 @@
           &copy; 2023 DevProfiles. 保留所有权利。
         </p>
         <div class="flex space-x-6 text-sm">
-          <a href="#" class="text-light-300 hover:text-primary transition-colors">隐私政策</a>
+          <a href="/about.html#privacy" class="text-light-300 hover:text-primary transition-colors">隐私政策</a>
           <a href="#" class="text-light-300 hover:text-primary transition-colors">使用条款</a>
           <a href="/sitemap.html" class="text-light-300 hover:text-primary transition-colors">网站地图</a>
         </div>
