--- a/developer/yehudakatz.html
+++ b/developer/yehudakatz.html
@@ -912,7 +912,7 @@
                     &copy; 2023 DevProfiles. 保留所有权利。
                 </p>
                 <div class="flex gap-6">
-                    <a href="#" class="text-light/60 hover:text-primary transition-colors text-sm">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-light/60 hover:text-primary transition-colors text-sm">隐私政策</a>
                     <a href="#" class="text-light/60 hover:text-primary transition-colors text-sm">使用条款</a>
                     <a href="/sitemap.html" class="text-light/60 hover:text-primary transition-colors text-sm">网站地图</a>
                 </div>
