--- a/free/detail/7-zip.html
+++ b/free/detail/7-zip.html
@@ -910,7 +910,7 @@
                     &copy; 2023 7-Zip 介绍网 | 7-Zip 是 Igor Pavlov 的商标
                 </div>
                 <div class="flex gap-6 text-sm text-gray-500">
-                    <a href="#" class="hover:text-primary transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a>
                     <a href="#" class="hover:text-primary transition-colors">使用条款</a>
                     <a href="#" class="hover:text-primary transition-colors">网站地图</a>
                 </div>
