--- a/free/detail/bitbucket.html
+++ b/free/detail/bitbucket.html
@@ -623,7 +623,7 @@
                     <h3 class="text-white font-semibold mb-4">网站信息</h3>
                     <ul class="space-y-2">
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-white transition-colors">网站地图</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">联系我们</a></li>
                     </ul>
