--- a/free/detail/cursor.html
+++ b/free/detail/cursor.html
@@ -824,7 +824,7 @@
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">博客</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">招贤纳士</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                     </ul>
                 </div>
             </div>
@@ -835,7 +835,7 @@
                 </div>
                 <div class="flex gap-6 text-sm text-gray-500">
                     <a href="#" class="hover:text-primary transition-colors">服务条款</a>
-                    <a href="#" class="hover:text-primary transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a>
                     <a href="#" class="hover:text-primary transition-colors">Cookie 政策</a>
                 </div>
             </div>
