--- a/free/detail/echarts.html
+++ b/free/detail/echarts.html
@@ -891,7 +891,7 @@ myChart.setOption({
           &copy; 2023 ECharts 介绍网站. 本网站仅作介绍用途，ECharts 是 Apache 软件基金会的商标。
         </p>
         <div class="flex space-x-6">
-          <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
+          <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
           <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
           <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">联系我们</a>
         </div>
