--- a/free/detail/eslint.html
+++ b/free/detail/eslint.html
@@ -724,7 +724,7 @@ const result = calculateTotal(200, 6);</code></pre>
                 <div>
                     <h4 class="text-lg font-semibold mb-6">法律信息</h4>
                     <ul class="space-y-3">
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-white transition-colors">网站地图</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">联系我们</a></li>
@@ -738,7 +738,7 @@ const result = calculateTotal(200, 6);</code></pre>
                         &copy; 2023 CodeResources. 保留所有权利。
                     </p>
                     <div class="flex space-x-6">
-                        <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
+                        <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
                         <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">使用条款</a>
                         <a href="/sitemap.html" class="text-gray-500 hover:text-gray-300 text-sm">网站地图</a>
                     </div>
