--- a/free/detail/fastapi.html
+++ b/free/detail/fastapi.html
@@ -572,7 +572,7 @@ async def read_item(item_id: int, q: str = None):
                     <ul class="space-y-3">
                         <li><a href="/" class="text-gray-400 hover:text-primary transition-colors">首页</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
                     </ul>
                 </div>
@@ -582,7 +582,7 @@ async def read_item(item_id: int, q: str = None):
                 <p class="text-gray-500 text-sm mb-4 md:mb-0">© 2023 FastAPI介绍网. 保留所有权利.</p>
                 <div class="flex space-x-6">
                     <a href="/sitemap.html" class="text-gray-500 hover:text-primary text-sm transition-colors">网站地图</a>
-                    <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
                     <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
                 </div>
             </div>
