--- a/free/detail/firebase.html
+++ b/free/detail/firebase.html
@@ -737,7 +737,7 @@
                     © 2023 Firebase 指南. 本网站与 Google 或 Firebase 无关.
                 </p>
                 <div class="flex space-x-6">
-                    <a href="#" class="text-light-400 hover:text-firebase text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-light-400 hover:text-firebase text-sm transition-colors">隐私政策</a>
                     <a href="#" class="text-light-400 hover:text-firebase text-sm transition-colors">使用条款</a>
                     <a href="#" class="text-light-400 hover:text-firebase text-sm transition-colors">联系我们</a>
                 </div>
