--- a/free/detail/fly-io.html
+++ b/free/detail/fly-io.html
@@ -1090,7 +1090,7 @@ fly logs</code></pre>
                     <h3 class="text-white font-semibold mb-6 text-lg">网站信息</h3>
                     <ul class="space-y-3">
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-white transition-colors">网站地图</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">联系我们</a></li>
                     </ul>
