--- a/free/detail/glitch.html
+++ b/free/detail/glitch.html
@@ -1238,7 +1238,7 @@
                     &copy; 2023 Glitch 信息中心. 保留所有权利.
                 </p>
                 <div class="flex space-x-6">
-                    <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
                     <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">使用条款</a>
                     <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">联系我们</a>
                 </div>
