--- a/free/detail/index.html
+++ b/free/detail/index.html
@@ -368,7 +368,7 @@
                         <a href="#" class="text-gray-400 hover:text-primary transition-colors">资源提交</a>
                         <a href="#" class="text-gray-400 hover:text-primary transition-colors">使用帮助</a>
                         <a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a>
-                        <a href="#" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a>
+                        <a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a>
                         <a href="#" class="text-gray-400 hover:text-primary transition-colors">免责声明</a>
                     </div>
                 </div>
