--- a/free/detail/jest.html
+++ b/free/detail/jest.html
@@ -1180,7 +1180,7 @@ yarn test</code></pre>
                 <div>
                     <h4 class="text-white font-bold mb-6">法律信息</h4>
                     <ul class="space-y-3">
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">Cookie政策</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
@@ -1193,7 +1193,7 @@ yarn test</code></pre>
                     &copy; 2023 DevResources. 保留所有权利。
                 </p>
                 <div class="flex gap-6">
-                    <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
                     <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
                     <a href="/sitemap.html" class="text-gray-500 hover:text-primary text-sm transition-colors">网站地图</a>
                 </div>
