--- a/free/detail/json-placeholder.html
+++ b/free/detail/json-placeholder.html
@@ -752,7 +752,7 @@ fetch('https://jsonplaceholder.typicode.com/posts', {
                     &copy; 2023 JSONPlaceholder. 保留所有权利。
                 </p>
                 <div class="flex space-x-6">
-                    <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
                     <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
                     <a href="/sitemap.html" class="text-gray-500 hover:text-primary text-sm transition-colors">网站地图</a>
                 </div>
