--- a/free/detail/linux.html
+++ b/free/detail/linux.html
@@ -681,7 +681,7 @@
                     <ul class="space-y-3">
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系方式</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
                     </ul>
@@ -694,7 +694,7 @@
                         &copy; 2023 Linux 指南. 保留所有权利.
                     </p>
                     <div class="flex space-x-6">
-                        <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
+                        <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
                         <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
                         <a href="/sitemap.html" class="text-gray-500 hover:text-primary text-sm transition-colors">网站地图</a>
                     </div>
