--- a/free/detail/lottiefiles.html
+++ b/free/detail/lottiefiles.html
@@ -743,7 +743,7 @@
                     <ul class="space-y-3">
                         <li><a href="#" class="text-light/60 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-light/60 hover:text-primary transition-colors">联系方式</a></li>
-                        <li><a href="#" class="text-light/60 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-light/60 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-light/60 hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="/sitemap.html" class="text-light/60 hover:text-primary transition-colors">网站地图</a></li>
                     </ul>
@@ -755,7 +755,7 @@
                     &copy; 2023 LottieHub. 保留所有权利。
                 </p>
                 <div class="flex space-x-6">
-                    <a href="#" class="text-light/50 hover:text-primary text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-light/50 hover:text-primary text-sm transition-colors">隐私政策</a>
                     <a href="#" class="text-light/50 hover:text-primary text-sm transition-colors">使用条款</a>
                     <a href="/sitemap.html" class="text-light/50 hover:text-primary text-sm transition-colors">网站地图</a>
                 </div>
