--- a/free/detail/mocha.html
+++ b/free/detail/mocha.html
@@ -1136,7 +1136,7 @@
                 <div>
                     <h4 class="text-white font-semibold mb-6">法律信息</h4>
                     <ul class="space-y-3">
-                        <li><a href="#" class="text-gray-400 hover:text-mocha-gold transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-mocha-gold transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-mocha-gold transition-colors">使用条款</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-mocha-gold transition-colors">Cookie 政策</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-mocha-gold transition-colors">网站地图</a></li>
@@ -1150,7 +1150,7 @@
                         &copy; 2023 Mocha 介绍网站. 保留所有权利.
                     </p>
                     <div class="flex space-x-6">
-                        <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
+                        <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
                         <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">使用条款</a>
                         <a href="/sitemap.html" class="text-gray-500 hover:text-gray-300 text-sm">网站地图</a>
                     </div>
