--- a/free/detail/nextjs.html
+++ b/free/detail/nextjs.html
@@ -548,7 +548,7 @@
                     <h4 class="text-white font-semibold mb-4">站点信息</h4>
                     <ul class="space-y-2">
                         <li><a href="/sitemap.html" class="text-light-300 hover:text-primary transition-colors">网站地图</a></li>
-                        <li><a href="#" class="text-light-300 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-light-300 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-light-300 hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="#" class="text-light-300 hover:text-primary transition-colors">联系我们</a></li>
                     </ul>
@@ -561,7 +561,7 @@
                 </p>
                 <div class="flex space-x-6">
                     <a href="/sitemap.html" class="text-light-300 hover:text-primary text-sm transition-colors">网站地图</a>
-                    <a href="#" class="text-light-300 hover:text-primary text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-light-300 hover:text-primary text-sm transition-colors">隐私政策</a>
                     <a href="#" class="text-light-300 hover:text-primary text-sm transition-colors">使用条款</a>
                 </div>
             </div>
