--- a/free/detail/render.html
+++ b/free/detail/render.html
@@ -885,7 +885,7 @@
                 </p>
                 <div class="flex space-x-6">
                     <a href="/sitemap.html" class="text-gray-500 hover:text-primary text-sm transition-colors">网站地图</a>
-                    <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
                     <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
                 </div>
             </div>
