--- a/free/detail/reqres.html
+++ b/free/detail/reqres.html
@@ -645,7 +645,7 @@ fetch('https://reqres.in/api/users?page=2')
                     <ul class="space-y-3">
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">服务条款</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
                     </ul>
@@ -670,7 +670,7 @@ fetch('https://reqres.in/api/users?page=2')
                     &copy; 2023 APIHub. 保留所有权利。
                 </p>
                 <div class="flex space-x-6">
-                    <a href="#" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">隐私政策</a>
                     <a href="#" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">服务条款</a>
                     <a href="/sitemap.html" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">网站地图</a>
                 </div>
