--- a/free/detail/sass.html
+++ b/free/detail/sass.html
@@ -991,7 +991,7 @@ body {
                     &copy; 2023 Sass Guide. 保留所有权利。
                 </p>
                 <div class="flex space-x-6">
-                    <a href="#" class="text-light/60 text-sm hover:text-primary transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-light/60 text-sm hover:text-primary transition-colors">隐私政策</a>
                     <a href="#" class="text-light/60 text-sm hover:text-primary transition-colors">使用条款</a>
                     <a href="/sitemap.html" class="text-light/60 text-sm hover:text-primary transition-colors">网站地图</a>
                 </div>
