--- a/free/detail/tailwind.html
+++ b/free/detail/tailwind.html
@@ -803,7 +803,7 @@ npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch</code></pre>
           &copy; 2023 FrontendHub. 保留所有权利。
         </p>
         <div class="flex space-x-6">
-          <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
+          <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
           <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
           <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">Cookie 政策</a>
           <a href="/sitemap.html" class="text-gray-500 hover:text-primary text-sm transition-colors">网站地图</a>
