--- a/free/detail/unsplash.html
+++ b/free/detail/unsplash.html
@@ -425,7 +425,7 @@
                     <h4 class="text-white font-semibold mb-4">网站信息</h4>
                     <ul class="space-y-2">
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-accent transition-custom">网站地图</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-accent transition-custom">隐私政策</a></li>
+                        <li><a href="/about.html#privacy" class="text-gray-400 hover:text-accent transition-custom">隐私政策</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-accent transition-custom">使用条款</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-accent transition-custom">联系我们</a></li>
                     </ul>
