--- a/free/detail/vscode.html
+++ b/free/detail/vscode.html
@@ -927,7 +927,7 @@
                     &copy; 2023 VS Code 介绍网 | Visual Studio Code 是微软的商标
                 </div>
                 <div class="flex gap-6 text-sm text-gray-500">
-                    <a href="#" class="hover:text-primary transition-colors">隐私政策</a>
+                    <a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a>
                     <a href="#" class="hover:text-primary transition-colors">使用条款</a>
                     <a href="/sitemap.html" class="hover:text-primary transition-colors">网站地图</a>
                 </div>
