--- a/free/payment.html
+++ b/free/payment.html
@@ -653,7 +653,7 @@
           <ul class="space-y-2 text-gray-400">
             <li><a href="#" class="hover:text-primary transition-colors">关于我们</a></li>
             <li><a href="#" class="hover:text-primary transition-colors">使用条款</a></li>
-            <li><a href="#" class="hover:text-primary transition-colors">隐私政策</a></li>
+            <li><a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a></li>
             <li><a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="hover:text-primary transition-colors">提交资源</a></li>
           </ul>
         </div>
