--- a/hello/detail/studio.html
+++ b/hello/detail/studio.html
@@ -669,7 +669,7 @@
                 <p class="text-gray-500 text-sm mb-4 md:mb-0">© 2023 RootExploring. 保留所有权利。</p>
                 <div class="flex space-x-6">
                     <a href="/sitemap.html" class="text-gray-500 hover:text-neon-cyan text-sm transition-colors duration-300">网站地图</a>
-                    <a href="#" class="text-gray-500 hover:text-neon-cyan text-sm transition-colors duration-300">隐私政策</a>
+                    <a href="/about.html#privacy" class="text-gray-500 hover:text-neon-cyan text-sm transition-colors duration-300">隐私政策</a>
                     <a href="#" class="text-gray-500 hover:text-neon-cyan text-sm transition-colors duration-300">使用条款</a>
                 </div>
             </div>
