--- a/hello/transform.html
+++ b/hello/transform.html
@@ -945,7 +945,7 @@
       <div class="pt-8 border-t border-word-primary/10 flex flex-col md:flex-row justify-between items-center">
         <p class="text-gray-500 text-sm mb-4 md:mb-0">© 2025 WordTransform. 保留所有权利.</p>
         <div class="flex space-x-6">
-          <a href="#" class="text-gray-500 hover:text-word-primary transition-colors text-sm">隐私政策</a>
+          <a href="/about.html#privacy" class="text-gray-500 hover:text-word-primary transition-colors text-sm">隐私政策</a>
           <a href="#" class="text-gray-500 hover:text-word-primary transition-colors text-sm">服务条款</a>
           <a href="#" class="text-gray-500 hover:text-word-primary transition-colors text-sm">Cookie政策</a>
         </div>
