--- a/unsubscribe.html
+++ b/unsubscribe.html
@@ -258,7 +258,7 @@
             <div class="border-t border-white/10 mt-8 pt-8 text-sm text-center">
                 <p>&copy; 2023 Rinuo资源导航. 保留所有权利.</p>
                 <div class="mt-2 space-x-4">
-                    <a href="#" class="hover:text-primary transition-colors theme-transition">隐私政策</a>
+                    <a href="/about.html#privacy" class="hover:text-primary transition-colors theme-transition">隐私政策</a>
                     <a href="#" class="hover:text-primary transition-colors theme-transition">服务条款</a>
                 </div>
             </div>
