精确替换75个关于我们链接从#到/about.html#about

--- a/free/detail/eslint.html
+++ b/free/detail/eslint.html
@@ -706,7 +706,7 @@ const result = calculateTotal(200, 6);</code></pre>
                         <li><a href="/free" class="text-gray-400 hover:text-white transition-colors">免费资源</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">教程</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">工具</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-gray-400 hover:text-white transition-colors">关于我们</a></li>
                     </ul>
                 </div>
                 
