--- a/free/detail/index.html
+++ b/free/detail/index.html
@@ -364,7 +364,7 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">快速链接</h4>
                     <div class="grid grid-cols-2 gap-2">
-                        <a href="#" class="text-gray-400 hover:text-primary transition-colors">关于我们</a>
+                        <a href="/about.html#about" class="text-gray-400 hover:text-primary transition-colors">关于我们</a>
                         <a href="#" class="text-gray-400 hover:text-primary transition-colors">资源提交</a>
                         <a href="#" class="text-gray-400 hover:text-primary transition-colors">使用帮助</a>
                         <a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a>
