--- a/free/huggingface-models.html
+++ b/free/huggingface-models.html
@@ -88,7 +88,7 @@
                     <a href="#" class="text-primary font-medium relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-full after:bg-primary after:rounded-full">预训练模型</a>
                     <a href="#" class="text-muted hover:text-primary transition-colors relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:rounded-full after:transition-all hover:after:w-full">模型教程</a>
                     <a href="#" class="text-muted hover:text-primary transition-colors relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:rounded-full after:transition-all hover:after:w-full">API接口</a>
-                    <a href="#" class="text-muted hover:text-primary transition-colors relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:rounded-full after:transition-all hover:after:w-full">关于我们</a>
+                    <a href="/about.html#about" class="text-muted hover:text-primary transition-colors relative after:absolute after:bottom-0 after:left-0 after:h-0.5 after:w-0 after:bg-primary after:rounded-full after:transition-all hover:after:w-full">关于我们</a>
                 </nav>
                 
                 <!-- 移动端菜单按钮 -->
@@ -106,7 +106,7 @@
                     <a href="#" class="py-2 px-3 text-primary font-medium bg-primary/5 rounded-lg">预训练模型</a>
                     <a href="#" class="py-2 px-3 text-muted hover:text-primary hover:bg-gray-50 rounded-lg transition-colors">模型教程</a>
                     <a href="#" class="py-2 px-3 text-muted hover:text-primary hover:bg-gray-50 rounded-lg transition-colors">API接口</a>
-                    <a href="#" class="py-2 px-3 text-muted hover:text-primary hover:bg-gray-50 rounded-lg transition-colors">关于我们</a>
+                    <a href="/about.html#about" class="py-2 px-3 text-muted hover:text-primary hover:bg-gray-50 rounded-lg transition-colors">关于我们</a>
                 </nav>
             </div>
         </div>
@@ -355,7 +355,7 @@
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">热门模型</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">最新添加</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">模型教程</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-gray-400 hover:text-white transition-colors">关于我们</a></li>
                     </ul>
                 </div>
                 
