--- a/free/payment.html
+++ b/free/payment.html
@@ -75,7 +75,7 @@
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="text-muted hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
         </a>
-        <a href="#" class="text-muted hover:text-primary transition-colors">关于我们</a>
+        <a href="/about.html#about" class="text-muted hover:text-primary transition-colors">关于我们</a>
       </div>
       
       <!-- 移动端菜单按钮 -->
@@ -92,7 +92,7 @@
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="py-2 text-muted hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
         </a>
-        <a href="#" class="py-2 text-muted hover:text-primary transition-colors">关于我们</a>
+        <a href="/about.html#about" class="py-2 text-muted hover:text-primary transition-colors">关于我们</a>
       </div>
     </div>
   </header>
@@ -651,7 +651,7 @@
         <div>
           <h3 class="text-lg font-medium mb-4">相关链接</h3>
           <ul class="space-y-2 text-gray-400">
-            <li><a href="#" class="hover:text-primary transition-colors">关于我们</a></li>
+            <li><a href="/about.html#about" class="hover:text-primary transition-colors">关于我们</a></li>
             <li><a href="#" class="hover:text-primary transition-colors">使用条款</a></li>
             <li><a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a></li>
             <li><a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="hover:text-primary transition-colors">提交资源</a></li>
