--- a/free/sport.html
+++ b/free/sport.html
@@ -586,7 +586,7 @@
             <li><a href="ai.html" class="hover:text-primary transition-colors duration-200">AI接口</a></li>
             <li><a href="#" class="hover:text-primary transition-colors duration-200">使用教程</a></li>
             <li><a href="#" class="hover:text-primary transition-colors duration-200">常见问题</a></li>
-            <li><a href="#" class="hover:text-primary transition-colors duration-200">关于我们</a></li>
+            <li><a href="/about.html#about" class="hover:text-primary transition-colors duration-200">关于我们</a></li>
           </ul>
         </div>
         
