--- a/free/webrtc.html
+++ b/free/webrtc.html
@@ -496,7 +496,7 @@
             <li><a href="#apis" class="text-gray-400 hover:text-white transition-colors">API列表</a></li>
             <li><a href="#categories" class="text-gray-400 hover:text-white transition-colors">分类浏览</a></li>
             <li><a href="#comparison" class="text-gray-400 hover:text-white transition-colors">服务对比</a></li>
-            <li><a href="#" class="text-gray-400 hover:text-white transition-colors">关于我们</a></li>
+            <li><a href="/about.html#about" class="text-gray-400 hover:text-white transition-colors">关于我们</a></li>
           </ul>
         </div>
         
