--- a/hello/detail/visual.html
+++ b/hello/detail/visual.html
@@ -503,7 +503,7 @@
                         <li><a href="#" class="text-gray-400 hover:text-neon-blue transition-colors duration-300">词根列表</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-neon-blue transition-colors duration-300">词源词典</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-neon-blue transition-colors duration-300">语言资源</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-neon-blue transition-colors duration-300">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-gray-400 hover:text-neon-blue transition-colors duration-300">关于我们</a></li>
                     </ul>
                 </div>
                 
