--- a/book-7.html
+++ b/book-7.html
@@ -810,7 +810,7 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">关于</h4>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系方式</a></li>
                         <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">使用条款</a></li>
