--- a/dark.html
+++ b/dark.html
@@ -591,7 +591,7 @@
             <li><a href="#medical" class="text-gray-400 hover:text-white transition-colors">医疗类设计</a></li>
             <li><a href="#finance" class="text-gray-400 hover:text-white transition-colors">金融类设计</a></li>
             <li><a href="#design" class="text-gray-400 hover:text-white transition-colors">设计资源</a></li>
-            <li><a href="#" class="text-gray-400 hover:text-white transition-colors">关于我们</a></li>
+            <li><a href="/about.html#about" class="text-gray-400 hover:text-white transition-colors">关于我们</a></li>
           </ul>
         </div>
         
