--- a/free/ai-inference.html
+++ b/free/ai-inference.html
@@ -94,7 +94,7 @@
         <a href="https://github.com" target="_blank" class="text-muted hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
         </a>
-        <a href="#" class="text-muted hover:text-primary transition-colors">关于我们</a>
+        <a href="/about.html#about" class="text-muted hover:text-primary transition-colors">关于我们</a>
       </div>
       
       <!-- 移动端菜单按钮 -->
@@ -111,7 +111,7 @@
         <a href="https://github.com" target="_blank" class="py-2 text-muted hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
         </a>
-        <a href="#" class="py-2 text-muted hover:text-primary transition-colors">关于我们</a>
+        <a href="/about.html#about" class="py-2 text-muted hover:text-primary transition-colors">关于我们</a>
       </div>
     </div>
   </header>
