--- a/free/ai.html
+++ b/free/ai.html
@@ -853,7 +853,7 @@
                 <div>
                     <h3 class="text-lg font-medium mb-4">相关链接</h3>
                     <ul class="space-y-2 text-gray-400">
-                        <li><a href="#" class="hover:text-primary transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="https://github.com" target="_blank" class="hover:text-primary transition-colors">提交资源</a></li>
