--- a/free/detail/cursor.html
+++ b/free/detail/cursor.html
@@ -820,7 +820,7 @@
                 <div>
                     <h3 class="font-bold text-lg mb-4">公司</h3>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">博客</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">招贤纳士</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
