--- a/free/detail/deepseek.html
+++ b/free/detail/deepseek.html
@@ -1168,7 +1168,7 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">公司</h4>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-dark-400 hover:text-deepseek-primary transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-dark-400 hover:text-deepseek-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-dark-400 hover:text-deepseek-primary transition-colors">新闻动态</a></li>
                         <li><a href="#" class="text-dark-400 hover:text-deepseek-primary transition-colors">加入我们</a></li>
                         <li><a href="#" class="text-dark-400 hover:text-deepseek-primary transition-colors">联系我们</a></li>
