--- a/free/detail/figma.html
+++ b/free/detail/figma.html
@@ -693,7 +693,7 @@
                 <div>
                     <h3 class="text-white font-semibold mb-4">网站信息</h3>
                     <ul class="space-y-3">
-                        <li><a href="#" class="text-light-300 hover:text-secondary transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-light-300 hover:text-secondary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-light-300 hover:text-secondary transition-colors">联系方式</a></li>
                         <li><a href="/about.html#privacy" class="text-light-300 hover:text-secondary transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-light-300 hover:text-secondary transition-colors">使用条款</a></li>
