--- a/free/detail/freenom.html
+++ b/free/detail/freenom.html
@@ -85,7 +85,7 @@
                 <a href="/" class="hover:text-primary transition-colors">首页</a>
                 <a href="/free" class="hover:text-primary transition-colors">免费资源</a>
                 <a href="#" class="hover:text-primary transition-colors">工具</a>
-                <a href="#" class="hover:text-primary transition-colors">关于我们</a>
+                <a href="/about.html#about" class="hover:text-primary transition-colors">关于我们</a>
             </div>
             
             <div class="flex items-center space-x-4">
@@ -107,7 +107,7 @@
                 <a href="/" class="py-2 hover:text-primary transition-colors">首页</a>
                 <a href="/free" class="py-2 hover:text-primary transition-colors">免费资源</a>
                 <a href="#" class="py-2 hover:text-primary transition-colors">工具</a>
-                <a href="#" class="py-2 hover:text-primary transition-colors">关于我们</a>
+                <a href="/about.html#about" class="py-2 hover:text-primary transition-colors">关于我们</a>
             </div>
         </div>
     </header>
@@ -582,7 +582,7 @@
                         <li><a href="/free" class="text-gray-400 hover:text-primary transition-colors">免费资源</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">最新添加</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">热门资源</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
                     </ul>
                 </div>
