--- a/free/detail/jest.html
+++ b/free/detail/jest.html
@@ -1172,7 +1172,7 @@ yarn test</code></pre>
                         <li><a href="/" class="text-gray-400 hover:text-primary transition-colors">首页</a></li>
                         <li><a href="/free" class="text-gray-400 hover:text-primary transition-colors">免费资源</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">教程</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
                     </ul>
                 </div>
