--- a/free/detail/lottiefiles.html
+++ b/free/detail/lottiefiles.html
@@ -741,7 +741,7 @@
                 <div>
                     <h4 class="text-lg font-bold mb-6">网站信息</h4>
                     <ul class="space-y-3">
-                        <li><a href="#" class="text-light/60 hover:text-primary transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-light/60 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-light/60 hover:text-primary transition-colors">联系方式</a></li>
                         <li><a href="/about.html#privacy" class="text-light/60 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-light/60 hover:text-primary transition-colors">使用条款</a></li>
