--- a/free/detail/mocha.html
+++ b/free/detail/mocha.html
@@ -1117,7 +1117,7 @@
                         <li><a href="/" class="text-gray-400 hover:text-mocha-gold transition-colors">首页</a></li>
                         <li><a href="/free" class="text-gray-400 hover:text-mocha-gold transition-colors">免费资源</a></li>
                         <li><a href="/free/detail/" class="text-gray-400 hover:text-mocha-gold transition-colors">资源列表</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-mocha-gold transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-gray-400 hover:text-mocha-gold transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-mocha-gold transition-colors">联系我们</a></li>
                     </ul>
                 </div>
