--- a/free/detail/openai.html
+++ b/free/detail/openai.html
@@ -1029,7 +1029,7 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-4">公司</h4>
                     <ul class="space-y-2">
-                        <li><a href="#" class="text-dark-400 hover:text-openai-primary transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-dark-400 hover:text-openai-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-dark-400 hover:text-openai-primary transition-colors">博客</a></li>
                         <li><a href="#" class="text-dark-400 hover:text-openai-primary transition-colors">招贤纳士</a></li>
                         <li><a href="#" class="text-dark-400 hover:text-openai-primary transition-colors">联系我们</a></li>
