--- a/free/detail/reqres.html
+++ b/free/detail/reqres.html
@@ -643,7 +643,7 @@ fetch('https://reqres.in/api/users?page=2')
                 <div>
                     <h4 class="text-lg font-bold mb-6 text-white">公司</h4>
                     <ul class="space-y-3">
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系我们</a></li>
                         <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">服务条款</a></li>
