--- a/free/detail/trello.html
+++ b/free/detail/trello.html
@@ -656,7 +656,7 @@
                 <div>
                     <h4 class="text-lg font-semibold mb-6">网站信息</h4>
                     <ul class="space-y-3">
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-gray-400 hover:text-white transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">联系方式</a></li>
                         <li><a href="/about.html#privacy" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
