--- a/free/news.html
+++ b/free/news.html
@@ -342,7 +342,7 @@
                 <div>
                     <h4 class="text-white font-medium mb-4">快速链接</h4>
                     <ul class="space-y-2 text-sm">
-                        <li><a href="#" class="text-gray-400 hover:text-primary-500 transition-colors">关于我们</a></li>
+                        <li><a href="/about.html#about" class="text-gray-400 hover:text-primary-500 transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary-500 transition-colors">资源提交</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary-500 transition-colors">接口状态</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary-500 transition-colors">使用条款</a></li>
