--- a/free/push.html
+++ b/free/push.html
@@ -114,7 +114,7 @@
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="text-muted dark:text-darkMuted hover:text-primary dark:hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
         </a>
-        <a href="#" class="text-muted dark:text-darkMuted hover:text-primary dark:hover:text-primary transition-colors">关于我们</a>
+        <a href="/about.html#about" class="text-muted dark:text-darkMuted hover:text-primary dark:hover:text-primary transition-colors">关于我们</a>
         <!-- 暗黑模式切换按钮 -->
         <button id="themeToggle" class="p-2 rounded-full hover:bg-gray-100 dark:hover:bg-gray-800 transition-colors focus:outline-none">
           <i class="fa fa-moon-o dark:hidden text-xl"></i>
@@ -142,7 +142,7 @@
         <a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="py-2 text-muted dark:text-darkMuted hover:text-primary dark:hover:text-primary transition-colors flex items-center">
           <i class="fa fa-github mr-1"></i> 提交资源
         </a>
-        <a href="#" class="py-2 text-muted dark:text-darkMuted hover:text-primary dark:hover:text-primary transition-colors">关于我们</a>
+        <a href="/about.html#about" class="py-2 text-muted dark:text-darkMuted hover:text-primary dark:hover:text-primary transition-colors">关于我们</a>
       </div>
     </div>
   </header>
@@ -776,7 +776,7 @@
         <div>
           <h3 class="text-lg font-medium mb-4">快速链接</h3>
           <ul class="space-y-2 text-sm text-gray-400">
-            <li><a href="#" class="hover:text-primary transition-colors">关于我们</a></li>
+            <li><a href="/about.html#about" class="hover:text-primary transition-colors">关于我们</a></li>
             <li><a href="https://github.com/guomengtao/rinuo.com/issues" target="_blank" class="hover:text-primary transition-colors">提交资源</a></li>
             <li><a href="#" class="hover:text-primary transition-colors">使用条款</a></li>
             <li><a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a></li>
