--- a/hello/detail/motivate.html
+++ b/hello/detail/motivate.html
@@ -1138,7 +1138,7 @@
         </div>
         
         <div class="flex flex-wrap justify-center gap-6 mb-6 md:mb-0">
-          <a href="#" class="text-gray-600 hover:text-vocab-primary dark:text-gray-300 dark:hover:text-vocab-primary transition-colors">关于我们</a>
+          <a href="/about.html#about" class="text-gray-600 hover:text-vocab-primary dark:text-gray-300 dark:hover:text-vocab-primary transition-colors">关于我们</a>
           <a href="#" class="text-gray-600 hover:text-vocab-primary dark:text-gray-300 dark:hover:text-vocab-primary transition-colors">使用帮助</a>
           <a href="#" class="text-gray-600 hover:text-vocab-primary dark:text-gray-300 dark:hover:text-vocab-primary transition-colors">词汇库</a>
           <a href="#" class="text-gray-600 hover:text-vocab-primary dark:text-gray-300 dark:hover:text-vocab-primary transition-colors">学习资源</a>
