--- a/free/detail/gradio.html
+++ b/free/detail/gradio.html
@@ -903,7 +903,7 @@ Running on public URL: https://xxxx.gradio.app</code></pre>
                     <h3 class="text-lg font-semibold mb-6">法律信息</h3>
                     <ul class="space-y-3 text-sm">
                         <li><a href="/about.html#privacy" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
+                        <li><a href="/about.html#terms" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">版权声明</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-white transition-colors">网站地图</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">联系我们</a></li>
