--- a/free/detail/sass.html
+++ b/free/detail/sass.html
@@ -992,7 +992,7 @@ body {
                 </p>
                 <div class="flex space-x-6">
                     <a href="/about.html#privacy" class="text-light/60 text-sm hover:text-primary transition-colors">隐私政策</a>
-                    <a href="#" class="text-light/60 text-sm hover:text-primary transition-colors">使用条款</a>
+                    <a href="/about.html#terms" class="text-light/60 text-sm hover:text-primary transition-colors">使用条款</a>
                     <a href="/sitemap.html" class="text-light/60 text-sm hover:text-primary transition-colors">网站地图</a>
                 </div>
             </div>
