--- a/free/serverless.html
+++ b/free/serverless.html
@@ -689,7 +689,7 @@
                         <li><a href="index.html" class="hover:text-primary transition-colors">首页</a></li>
                         <li><a href="#" class="hover:text-primary transition-colors">使用指南</a></li>
                         <li><a href="#" class="hover:text-primary transition-colors">常见问题</a></li>
-                        <li><a href="#" class="hover:text-primary transition-colors">使用条款</a></li>
+                        <li><a href="/about.html#terms" class="hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a></li>
                     </ul>
                 </div>
