--- a/developer/brendaneich.html
+++ b/developer/brendaneich.html
@@ -944,7 +944,7 @@
                 </div>
                 <div class="flex gap-6">
                     <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
-                    <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
+                    <a href="/about.html#terms" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
                     <a href="/sitemap.html" class="text-gray-500 hover:text-primary text-sm transition-colors">网站地图</a>
                 </div>
             </div>
