--- a/developer/kentcdodds.html
+++ b/developer/kentcdodds.html
@@ -982,7 +982,7 @@
         </p>
         <div class="flex space-x-6 text-sm">
           <a href="/about.html#privacy" class="text-light-300 hover:text-primary transition-colors">隐私政策</a>
-          <a href="#" class="text-light-300 hover:text-primary transition-colors">使用条款</a>
+          <a href="/about.html#terms" class="text-light-300 hover:text-primary transition-colors">使用条款</a>
           <a href="/sitemap.html" class="text-light-300 hover:text-primary transition-colors">网站地图</a>
         </div>
       </div>
