--- a/developer/yehudakatz.html
+++ b/developer/yehudakatz.html
@@ -913,7 +913,7 @@
                 </p>
                 <div class="flex gap-6">
                     <a href="/about.html#privacy" class="text-light/60 hover:text-primary transition-colors text-sm">隐私政策</a>
-                    <a href="#" class="text-light/60 hover:text-primary transition-colors text-sm">使用条款</a>
+                    <a href="/about.html#terms" class="text-light/60 hover:text-primary transition-colors text-sm">使用条款</a>
                     <a href="/sitemap.html" class="text-light/60 hover:text-primary transition-colors text-sm">网站地图</a>
                 </div>
             </div>
