--- a/free/ai-text.html
+++ b/free/ai-text.html
@@ -529,7 +529,7 @@
                         <li><a href="index.html" class="hover:text-primary transition-colors">首页</a></li>
                         <li><a href="ai.html" class="hover:text-primary transition-colors">AI接口资源</a></li>
                         <li><a href="otp.html" class="hover:text-primary transition-colors">验证码接口</a></li>
-                        <li><a href="#" class="hover:text-primary transition-colors">使用条款</a></li>
+                        <li><a href="/about.html#terms" class="hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="/about.html#privacy" class="hover:text-primary transition-colors">隐私政策</a></li>
                     </ul>
                 </div>
