--- a/free/detail/echarts.html
+++ b/free/detail/echarts.html
@@ -892,7 +892,7 @@ myChart.setOption({
         </p>
         <div class="flex space-x-6">
           <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
-          <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
+          <a href="/about.html#terms" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
           <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">联系我们</a>
         </div>
       </div>
