--- a/free/detail/firebase.html
+++ b/free/detail/firebase.html
@@ -738,7 +738,7 @@
                 </p>
                 <div class="flex space-x-6">
                     <a href="/about.html#privacy" class="text-light-400 hover:text-firebase text-sm transition-colors">隐私政策</a>
-                    <a href="#" class="text-light-400 hover:text-firebase text-sm transition-colors">使用条款</a>
+                    <a href="/about.html#terms" class="text-light-400 hover:text-firebase text-sm transition-colors">使用条款</a>
                     <a href="#" class="text-light-400 hover:text-firebase text-sm transition-colors">联系我们</a>
                 </div>
             </div>
