--- a/free/detail/freenom.html
+++ b/free/detail/freenom.html
@@ -591,7 +591,7 @@
                     <h3 class="text-lg font-semibold mb-6">法律信息</h3>
                     <ul class="space-y-3">
                         <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">使用条款</a></li>
+                        <li><a href="/about.html#terms" class="text-gray-400 hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">免责声明</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">Cookie政策</a></li>
