--- a/free/detail/linux.html
+++ b/free/detail/linux.html
@@ -682,7 +682,7 @@
                         <li><a href="/about.html#about" class="text-gray-400 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">联系方式</a></li>
                         <li><a href="/about.html#privacy" class="text-gray-400 hover:text-primary transition-colors">隐私政策</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary transition-colors">使用条款</a></li>
+                        <li><a href="/about.html#terms" class="text-gray-400 hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-primary transition-colors">网站地图</a></li>
                     </ul>
                 </div>
@@ -695,7 +695,7 @@
                     </p>
                     <div class="flex space-x-6">
                         <a href="/about.html#privacy" class="text-gray-500 hover:text-primary text-sm transition-colors">隐私政策</a>
-                        <a href="#" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
+                        <a href="/about.html#terms" class="text-gray-500 hover:text-primary text-sm transition-colors">使用条款</a>
                         <a href="/sitemap.html" class="text-gray-500 hover:text-primary text-sm transition-colors">网站地图</a>
                     </div>
                 </div>
