--- a/free/detail/lottiefiles.html
+++ b/free/detail/lottiefiles.html
@@ -744,7 +744,7 @@
                         <li><a href="/about.html#about" class="text-light/60 hover:text-primary transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-light/60 hover:text-primary transition-colors">联系方式</a></li>
                         <li><a href="/about.html#privacy" class="text-light/60 hover:text-primary transition-colors">隐私政策</a></li>
-                        <li><a href="#" class="text-light/60 hover:text-primary transition-colors">使用条款</a></li>
+                        <li><a href="/about.html#terms" class="text-light/60 hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="/sitemap.html" class="text-light/60 hover:text-primary transition-colors">网站地图</a></li>
                     </ul>
                 </div>
@@ -756,7 +756,7 @@
                 </p>
                 <div class="flex space-x-6">
                     <a href="/about.html#privacy" class="text-light/50 hover:text-primary text-sm transition-colors">隐私政策</a>
-                    <a href="#" class="text-light/50 hover:text-primary text-sm transition-colors">使用条款</a>
+                    <a href="/about.html#terms" class="text-light/50 hover:text-primary text-sm transition-colors">使用条款</a>
                     <a href="/sitemap.html" class="text-light/50 hover:text-primary text-sm transition-colors">网站地图</a>
                 </div>
             </div>
