--- a/free/detail/mocha.html
+++ b/free/detail/mocha.html
@@ -1137,7 +1137,7 @@
                     <h4 class="text-white font-semibold mb-6">法律信息</h4>
                     <ul class="space-y-3">
                         <li><a href="/about.html#privacy" class="text-gray-400 hover:text-mocha-gold transition-colors">隐私政策</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-mocha-gold transition-colors">使用条款</a></li>
+                        <li><a href="/about.html#terms" class="text-gray-400 hover:text-mocha-gold transition-colors">使用条款</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-mocha-gold transition-colors">Cookie 政策</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-mocha-gold transition-colors">网站地图</a></li>
                     </ul>
@@ -1151,7 +1151,7 @@
                     </p>
                     <div class="flex space-x-6">
                         <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
-                        <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">使用条款</a>
+                        <a href="/about.html#terms" class="text-gray-500 hover:text-gray-300 text-sm">使用条款</a>
                         <a href="/sitemap.html" class="text-gray-500 hover:text-gray-300 text-sm">网站地图</a>
                     </div>
                 </div>
