--- a/free/detail/notion.html
+++ b/free/detail/notion.html
@@ -577,7 +577,7 @@
                 <div class="flex space-x-6">
                     <a href="/sitemap.html" class="text-notion-light hover:text-notion-text text-sm transition-colors">网站地图</a>
                     <a href="/about.html#privacy" class="text-notion-light hover:text-notion-text text-sm transition-colors">隐私政策</a>
-                    <a href="#" class="text-notion-light hover:text-notion-text text-sm transition-colors">使用条款</a>
+                    <a href="/about.html#terms" class="text-notion-light hover:text-notion-text text-sm transition-colors">使用条款</a>
                     <a href="#" class="text-notion-light hover:text-notion-text text-sm transition-colors">联系我们</a>
                 </div>
             </div>
