--- a/free/detail/trello.html
+++ b/free/detail/trello.html
@@ -659,7 +659,7 @@
                         <li><a href="/about.html#about" class="text-gray-400 hover:text-white transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-white transition-colors">联系方式</a></li>
                         <li><a href="/about.html#privacy" class="text-gray-400 hover:text-white transition-colors">隐私政策</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
+                        <li><a href="/about.html#terms" class="text-gray-400 hover:text-white transition-colors">使用条款</a></li>
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-white transition-colors">网站地图</a></li>
                     </ul>
                 </div>
@@ -672,7 +672,7 @@
                 <div class="flex space-x-6">
                     <a href="/sitemap.html" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">网站地图</a>
                     <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">隐私政策</a>
-                    <a href="#" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">使用条款</a>
+                    <a href="/about.html#terms" class="text-gray-500 hover:text-gray-300 text-sm transition-colors">使用条款</a>
                 </div>
             </div>
         </div>
