--- a/free/detail/unsplash.html
+++ b/free/detail/unsplash.html
@@ -426,7 +426,7 @@
                     <ul class="space-y-2">
                         <li><a href="/sitemap.html" class="text-gray-400 hover:text-accent transition-custom">网站地图</a></li>
                         <li><a href="/about.html#privacy" class="text-gray-400 hover:text-accent transition-custom">隐私政策</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-accent transition-custom">使用条款</a></li>
+                        <li><a href="/about.html#terms" class="text-gray-400 hover:text-accent transition-custom">使用条款</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-accent transition-custom">联系我们</a></li>
                     </ul>
                 </div>
