--- a/free/detail/vite.html
+++ b/free/detail/vite.html
@@ -1166,7 +1166,7 @@
         
         <div class="flex space-x-6">
           <a href="/about.html#privacy" class="text-light-300 hover:text-primary transition-colors text-sm">隐私政策</a>
-          <a href="#" class="text-light-300 hover:text-primary transition-colors text-sm">使用条款</a>
+          <a href="/about.html#terms" class="text-light-300 hover:text-primary transition-colors text-sm">使用条款</a>
           <a href="/sitemap.html" class="text-light-300 hover:text-primary transition-colors text-sm">网站地图</a>
         </div>
       </div>
