--- a/free/detail/vitest.html
+++ b/free/detail/vitest.html
@@ -705,7 +705,7 @@ describe(<span class="text-yellow-400">'数学函数测试'</span>, () => {
                 </p>
                 <div class="flex space-x-6">
                     <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
-                    <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">使用条款</a>
+                    <a href="/about.html#terms" class="text-gray-500 hover:text-gray-300 text-sm">使用条款</a>
                     <a href="/sitemap.html" class="text-gray-500 hover:text-gray-300 text-sm">网站地图</a>
                 </div>
             </div>
