--- a/free/huggingface-models.html
+++ b/free/huggingface-models.html
@@ -382,7 +382,7 @@
                 <p class="text-gray-500 text-sm">&copy; 2023 AI模型指南. 保留所有权利</p>
                 <div class="flex space-x-6 mt-4 md:mt-0">
                     <a href="/about.html#privacy" class="text-gray-500 hover:text-gray-300 text-sm">隐私政策</a>
-                    <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">使用条款</a>
+                    <a href="/about.html#terms" class="text-gray-500 hover:text-gray-300 text-sm">使用条款</a>
                     <a href="#" class="text-gray-500 hover:text-gray-300 text-sm">Cookie政策</a>
                 </div>
             </div>
