--- a/free/news.html
+++ b/free/news.html
@@ -345,7 +345,7 @@
                         <li><a href="/about.html#about" class="text-gray-400 hover:text-primary-500 transition-colors">关于我们</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary-500 transition-colors">资源提交</a></li>
                         <li><a href="#" class="text-gray-400 hover:text-primary-500 transition-colors">接口状态</a></li>
-                        <li><a href="#" class="text-gray-400 hover:text-primary-500 transition-colors">使用条款</a></li>
+                        <li><a href="/about.html#terms" class="text-gray-400 hover:text-primary-500 transition-colors">使用条款</a></li>
                     </ul>
                 </div>
                 
