--- a/free/sound-effects.html
+++ b/free/sound-effects.html
@@ -627,7 +627,7 @@
                         <li><a href="index.html" class="hover:text-primary transition-colors">首页</a></li>
                         <li><a href="ai.html" class="hover:text-primary transition-colors">AI接口资源</a></li>
                         <li><a href="icons.html" class="hover:text-primary transition-colors">图标资源</a></li>
-                        <li><a href="#" class="hover:text-primary transition-colors">使用条款</a></li>
+                        <li><a href="/about.html#terms" class="hover:text-primary transition-colors">使用条款</a></li>
                         <li><a href="https://github.com" target="_blank" class="hover:text-primary transition-colors">提交资源</a></li>
                     </ul>
                 </div>
