--- a/hello/detail/studio.html
+++ b/hello/detail/studio.html
@@ -670,7 +670,7 @@
                 <div class="flex space-x-6">
                     <a href="/sitemap.html" class="text-gray-500 hover:text-neon-cyan text-sm transition-colors duration-300">网站地图</a>
                     <a href="/about.html#privacy" class="text-gray-500 hover:text-neon-cyan text-sm transition-colors duration-300">隐私政策</a>
-                    <a href="#" class="text-gray-500 hover:text-neon-cyan text-sm transition-colors duration-300">使用条款</a>
+                    <a href="/about.html#terms" class="text-gray-500 hover:text-neon-cyan text-sm transition-colors duration-300">使用条款</a>
                 </div>
             </div>
         </div>
